# Thesis

./: .gitignore  CMakeLists.txt  main.cpp
Google_tests/: CMakeLists.txt  ShipBaseTest.cpp  test.cpp  test2.cpp
Google_tests/Tests/: AvoidingEnemyTest.cpp  ChasingEnemyTest.cpp  EnemyShipTest.cpp  MovableTest.cpp  PlayerShipTest.cpp  ShipBaseTest.cpp  WaypointEnemyTest.cpp
SDL/lecture_01/: CMakeLists.txt  main.cpp
SDL/transforms/: CMakeLists.txt  abstract_vector.hpp  generic_matrix.hpp  generic_vector.hpp  main.cpp  transform_matrix.hpp  utils.hpp  vec.hpp
SpaceGame_Thesis/: generic_matrix.cpp  generic_matrix.hpp  utils.hpp
Thesis/: CMakeLists.txt  MyASTConsumer.cpp  MyASTVisitor.cpp  MyFrontendAction.cpp  a.out  main.cpp
thesis_space_shooter/: .clang-format  CMakeLists.txt
thesis_space_shooter/incl/: avoiding_enemy.hpp  chasing_enemy.hpp  choose_map_state.hpp  config.hpp  constants.hpp  enemy_ship.hpp  enums.hpp  game.hpp  main_menu.hpp  menu_base.hpp  movable.hpp  music_player.hpp  player_ship.hpp  playing_state.hpp  powerup.hpp  projectile.hpp  ship_base.hpp  sound_player.hpp  waypoint_enemy.hpp
thesis_space_shooter/new_sources/: .sources.txt.kate-swp  sources.txt
thesis_space_shooter/src/: avoiding_enemy.cpp  chasing_enemy.cpp  choose_map_state.cpp  enemy_ship.cpp  game.cpp  main.cpp  main_menu.cpp  menu_base.cpp  movable.cpp  player_ship.cpp  playing_state.cpp  powerup.cpp  projectile.cpp  ship_base.cpp  sound_player.cpp  waypoint_enemy.cpp
webfejl/zh_js/: index.html  script.js
